--- a/site-content/layouts/_default/index.html
+++ b/site-content/layouts/_default/index.html
@@ -3,7 +3,7 @@
   <ul>
     {{ range .Pages }}
       <li>
-        <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+        <a href="{{ .RelPermalink }}">{{ .RelPermalink }}</a>
       </li>
     {{ end }}
   </ul>
