--- a/site-content/layouts/_default/index.html
+++ b/site-content/layouts/_default/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <ul>
-    {{ range .Pages }}
+    {{ range sort .Pages ".File.Path" "desc" }}
       <li>
         <a href="{{ .RelPermalink }}">{{ .RelPermalink }}</a>
       </li>
