--- a/site-content/layouts/_default/index.html
+++ b/site-content/layouts/_default/index.html
@@ -2,7 +2,7 @@
   <ul>
     {{ range sort .Pages "Date" "desc" }}
       <li>
-        <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+        <a href="{{ .RelPermalink }}">{{ .Title }} <small>{{ .Date.Format "2006-01-02" }}</small></a>
       </li>
     {{ end }}
   </ul>
